--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "gatsby": "^4.1.0",
     "gatsby-plugin-image": "^2.1.0",
+    "gatsby-plugin-postcss": "^5.1.0",
     "gatsby-plugin-sharp": "^4.1.0",
     "gatsby-source-filesystem": "^4.1.0",
     "gatsby-transformer-sharp": "^4.1.0",
+    "postcss": "^8.3.11",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
